# swarmshift

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: render-demo.yml
app/: __init__.py  main.py  schemas.py  skill_template.py  web.py
app/services/: __init__.py  scheduler.py
demo-video/: SCRIPT.md  STORYBOARD.md  audio_engine_meta.json  audio_meta.json  audio_request.json  caption_groups.json  frame.md  index.html  meta.json  package.json
demo-video/.media/: index.md  manifest.jsonl
demo-video/compositions/: captions.html
demo-video/compositions/frames/: 01-deadline-survives.html  02-meet-swarmshift.html  03-constraints.html  04-verifiable-plan.html  05-failure-replanned.html  06-plan-the-swarm.html
examples/: mission.json
tests/: test_api.py  test_scheduler.py
